<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_nome"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:ems="30"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextConvenio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textinho"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_numero"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/prosseguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextcpf" />

    <EditText
        android:id="@+id/editTextcpf"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_cpf"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextsenha" />

    <EditText
        android:id="@+id/editTextsenha"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_senha"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextcpf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_email"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:ems="20"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextsenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextConvenio" />

    <EditText
        android:id="@+id/editTextConvenio"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_convenio"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/convenio"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/prosseguir"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/custom_botton"
        android:backgroundTint="#000000"
        android:elevation="2dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/prosseguir"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textinho"
        android:layout_width="361dp"
        android:layout_height="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textinho"
        android:textColor="#ff999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/cadastro" />

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="656dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/cadastro"
        android:textColor="#FF0277bd"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>